kubernetes/ingress-controller/mentor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mentor-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
spec:
  #  tls:
  #  - hosts:
  #    - "localhost"
  #    secretName: tls
  rules:
    - host: "localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mentor-service
                port:
                  number: 80
